--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,17 @@
 Package: displease
 Type: Package
 Title: Non-Linear Numeric Sequences
-Version: 0.1.0
-Author: mikefc
-Maintainer: mikefc <mikefc@coolbutuseless.com>
+Version: 0.1.0.9000
+Authors@R: c(
+ person("Mike", "Cheng", role = c("aut", "cre", 'cph'),
+ email = "mikefc@coolbutuseless.com"))
+Maintainer: Mike Cheng <mikefc@coolbutuseless.com>
 Description: Non-linear interpolation between numeric values using easing functions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.3.1
+URL: https://github.com/coolbutuseless/displease
+BugReports: https://github.com/coolbutuseless/displease/issues
+Imports:
+  farver
