--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: displease
 Type: Package
 Title: Non-Linear Numeric Sequences
-Version: 0.1.0.9000
+Version: 0.1.0.9001
 Authors@R: c(
  person("Mike", "Cheng", role = c("aut", "cre", 'cph'),
  email = "mikefc@coolbutuseless.com"))
 Maintainer: Mike Cheng <mikefc@coolbutuseless.com>
-Description: Non-linear interpolation between numeric values using easing functions.
+Description: Non-linear interpolation between numeric values and colors 
+ using easing functions.
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 URL: https://github.com/coolbutuseless/displease
 BugReports: https://github.com/coolbutuseless/displease/issues
-Imports:
+Suggests:
   farver
