tidy. prep for CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: displease
 Type: Package
-Title: Non-Linear Numeric Sequences
-Version: 0.1.0.9001
+Title: Create Numeric and Color Sequences with Non-Linear Interpolation with Easing
+Version: 1.0.0
 Authors@R: c(
  person("Mike", "Cheng", role = c("aut", "cre", 'cph'),
  email = "mikefc@coolbutuseless.com"))
 Maintainer: Mike Cheng <mikefc@coolbutuseless.com>
-Description: Non-linear interpolation between numeric values and colors 
- using easing functions.
+Description: When visualising changes between two values over time, a strict
+ linear interpolation can look jarring and unnatural.  By applying a non-linear
+ easing to the transition, the motion between values can appear smoother and 
+ more natural.  This package includes functions for applying such non-linear
+ easings to colors and numeric values, and is useful where smooth animated movement
+ and transitions are desired.
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.3.2
